--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
       - GF_USERS_ALLOW_SIGN_UP=false
-      - GF_SERVER_ROOT_URL=${GF_SERVER_ROOT_URL:-localhost.seymon}/grafana/
+      - GF_SERVER_ROOT_URL=${GF_SERVER_ROOT_URL:-grafana.seymon.localhost/grafana}
       - GF_SERVER_SERVE_FROM_SUB_PATH=true
     cpus: ${CPUS_MAX:-0.4}
     restart: unless-stopped
