--- a/monitoring/crowdsec/config/acquis.yaml
+++ b/monitoring/crowdsec/config/acquis.yaml
@@ -14,3 +14,10 @@ labels:
 filename: /var/log/apache2/*.log
 labels:
   type: apache2
+---
+source: docker
+container_name:
+  - dokploy-traefik
+  - traefik
+labels:
+  type: traefik
