--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,12 @@ services:
       - '--storage.tsdb.retention.time=15d' # Adjust as needed
       - '--web.enable-remote-write-receiver'
       - '--enable-feature=remote-write-receiver'
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9090/-/healthy"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
     cpus: ${DC_CPU:-0.60}
     mem_limit: ${MEM_LIMIT:-300mb}
 
@@ -48,6 +54,12 @@ services:
       - ./monitoring/loki/config.yml:/etc/loki/local-config.yaml
       - loki_data:/loki
     command: -config.file=/etc/loki/local-config.yaml
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3100/ready"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
     cpus: ${CPUS_MAX:-0.4}
     restart: unless-stopped
 
@@ -64,6 +76,12 @@ services:
       - '--path.rootfs=/rootfs'
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9100/metrics"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
     cpus: ${CPUS_MAX:-0.4}
     restart: unless-stopped
 
@@ -100,6 +118,12 @@ services:
       - --storage.path=/var/lib/alloy/data
       - --server.http.ui-path-prefix=${ALLOY_UI_PATH_PREFIX:-/}
       - /etc/alloy/config.alloy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:12345/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
     cpus: ${CPUS_MAX:-0.4}
     restart: unless-stopped
 
@@ -120,6 +144,12 @@ services:
     # ports:
     #   - "127.0.0.1:6060:6060"
     #   - "127.0.0.1:8080:8080"
+    healthcheck:
+      test: ["CMD", "cscli", "metrics"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
     cpus: ${CPUS_MAX:-0.4}
     restart: unless-stopped
 
