fix: use volume bind mounds

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     #ports:
     # - "9090:9090"
     volumes:
-      - prometheus_data:/prometheus/data # Persistent storage for Prometheus data
+      - ./monitoring/prometheus/data:/prometheus/data:rw # Persistent storage for Prometheus data
       # - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml # Mount your Prometheus config
       # - caddy_logs:/var/log/caddy
     depends_on:
@@ -110,7 +110,7 @@ services:
     image: grafana/alloy:v1.12.1
     volumes:
       - ./monitoring/alloy/config.alloy:/etc/alloy/config.alloy
-      - alloy_data:/var/lib/alloy
+      - ./monitoring/alloy/data:/var/lib/alloy
       - /var/log:/var/log:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - crowdsec_geodata:/usr/share/GeoIP:ro
@@ -136,7 +136,7 @@ services:
   crowdsec:
     image: crowdsecurity/crowdsec:v1.7.4
     volumes:
-      - crowdsec_data:/var/lib/crowdsec/data
+      - ./monitoring/crowdsec/data:/var/lib/crowdsec/data
       - ./monitoring/crowdsec/config:/etc/crowdsec:rw
       - /var/log:/var/log:ro
       - crowdsec_geodata:/staging/var/lib/crowdsec/data/
