--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,13 +125,16 @@ services:
       - --server.http.ui-path-prefix=${ALLOY_UI_PATH_PREFIX:-/}
       - /etc/alloy/config.alloy
     healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost:12345/health"]
+      test: ["CMD-SHELL", "which alloy || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 30s
     cpus: ${CPUS_MAX:-0.4}
     restart: unless-stopped
+    networks:
+      -  default
+      -  dokploy-network
 
   crowdsec:
     image: crowdsecurity/crowdsec:v1.7.4
